--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "./src/app.ts",
   "scripts": {
-    "dev": "npx tsx ./src/app.ts",
+    "dev": "nodemon ./src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Thiago Miquelleto Tolotti",
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.1",
+    "nodemon": "^3.1.9"
   }
 }
