--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
   "author": "Thiago Miquelleto Tolotti",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
