--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
   "author": "Thiago Miquelleto Tolotti",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongoose": "^8.13.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
