--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "Thiago Miquelleto Tolotti",
   "license": "ISC",
   "dependencies": {
+    "@react-email/components": "^0.0.34",
     "@sendgrid/mail": "^8.1.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
