--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" \"cp -r ./shared/menu ./backend/public\" \"cp -r ./shared/menu ./frontend/public\"",
     "dev:server": "cd backend && npm run dev",
     "dev:client": "cd frontend && npm run dev",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "install": "concurrently \"cd frontend && npm install\" \"cd backend && npm install\" && \"cd shared/emails && npm install\""
   },
   "author": "",
   "license": "ISC",
