--- a/shared/emails/package.json
+++ b/shared/emails/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@react-email/components": "0.0.34",
-    "react-dom": "19.0.0",
-    "react": "19.0.0"
+    "@react-email/render": "^1.0.5",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@types/react": "19.0.1",
