--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" \"cp -r ./shared/menu ./backend/public\" \"cp -r ./shared/menu ./frontend/public\"",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" \"npm run copy:client\" \"npm run copy:server\"",
+    "copy:client": "concurrently \"cp ./shared/menu/*.* ./frontend/src\" \"cp -r ./shared/menu/menu_images ./frontend/public\"",
+    "copy:server": "cp -r ./shared/menu ./frontend/public",
     "dev:server": "cd backend && npm run dev",
     "dev:client": "cd frontend && npm run dev",
     "build": "cd client && npm run build",
