--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v2
@@ -18,10 +18,6 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: 'us-east-2'
 
-    - name: Install AWS CLI
-      run: sudo apt-get install -y awscli
-
     - name: Sync files to S3
-      run: |
-        aws s3 sync ./ s3://${{ secrets.AWS_S3_BUCKET }} --delete
+      run: aws s3 sync ./frontend s3://${{ secrets.AWS_S3_BUCKET }} --delete
 
