--- a/.github/workflows/frontend-to-s3.yml
+++ b/.github/workflows/frontend-to-s3.yml
@@ -17,7 +17,21 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: 'us-east-2'
+        
+    - name: Installs Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 18
+
+    - name: Creates .env file
+      run: |
+        echo "VITE_BACKEND_URL=${{ secrets.VITE_BACKEND_URL }}" >> .env
+
+    - name: Installs dependencies and builds project
+      run: |
+        npm ci
+        npm run build
 
     - name: Sync files to S3
-      run: aws s3 sync ./frontend s3://${{ secrets.AWS_S3_BUCKET }} --delete
+      run: aws s3 sync ./frontend/dist s3://${{ secrets.AWS_S3_BUCKET }} --delete
 
