--- a/.github/workflows/frontend-to-s3.yml
+++ b/.github/workflows/frontend-to-s3.yml
@@ -29,6 +29,7 @@ jobs:
 
     - name: Installs dependencies and builds project
       run: |
+        cd frontend
         npm ci
         npm run build
 
