--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,8 @@
   "main": "./src/app.ts",
   "scripts": {
     "dev": "nodemon",
+    "build": "tsup",
+    "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Thiago Miquelleto Tolotti",
@@ -22,6 +24,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "nodemon": "^3.1.9",
-    "tsx": "^4.19.3"
+    "tsup": "^8.4.0",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2"
   }
 }
