--- a/.github/workflows/frontend-to-s3.yml
+++ b/.github/workflows/frontend-to-s3.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Creates .env file
       run: |
-        echo "VITE_BACKEND_URL=${{ secrets.VITE_BACKEND_URL }}" >> .env
+        echo "VITE_BACKEND_URL=${{ secrets.VITE_BACKEND_URL }}" >> ./frontend/.env
 
     - name: Installs dependencies and builds project
       run: |
