--- a/.github/workflows/backend_deploy.yml
+++ b/.github/workflows/backend_deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - name: SSH into EC2 and pull the latest changes
         uses: appleboy/ssh-action@master
         with:
-          host: 3.143.205.146
+          host: ${{ secrets.EC2_IP }}
           username: ec2-user
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
