--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" \"npm run copy:client\" \"npm run copy:server\"",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" \"npm run copy:all\"",
     "copy:client": "concurrently \"cp ./shared/menu/*.* ./frontend/src\" \"cp -r ./shared/menu/menu_images ./frontend/public\"",
     "copy:server": "cp ./shared/menu/*.* ./backend/public",
     "dev:server": "cd backend && npm run dev",
+    "copy:all": "concurrently \"npm run copy:client\" \"npm run copy:server\"",
     "dev:client": "cd frontend && npm run dev",
     "build": "cd client && npm run build",
     "install": "concurrently \"cd frontend && npm install\" \"cd backend && npm install\" && \"cd shared/emails && npm install\""
