fixes in copy:all command for fe pipeline

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "copy:client": "concurrently \"cp ./shared/menu/*.* ./frontend/src\" \"cp -r ./shared/menu/menu_images ./frontend/public\"",
     "copy:server": "cp ./shared/menu/*.* ./backend/public",
     "dev:server": "cd backend && npm run dev",
-    "copy:all": "concurrently \"npm run copy:client\" \"npm run copy:server\"",
+    "copy:all": "npm run copy:client && npm run copy:server",
     "dev:client": "cd frontend && npm run dev",
     "build": "cd client && npm run build",
     "install": "concurrently \"cd frontend && npm install\" \"cd backend && npm install\" && \"cd shared/emails && npm install\""
