--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "crypto": "^1.0.1",
     "nodemon": "^3.1.9",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
