adds seed:neighborhood script

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon",
     "build": "tsup",
     "start": "node dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed:neighborhoods": "tsx scripts/seedNeighborhoods.ts"
   },
   "author": "Thiago Miquelleto Tolotti",
   "license": "ISC",
