--- a/.github/workflows/backend_deploy.yml
+++ b/.github/workflows/backend_deploy.yml
@@ -25,3 +25,15 @@ jobs:
             npm ci
             npm run build
             pm2 restart api
+  seed:
+    runs-on: ubuntu-latest
+    steps:
+      - name: SSH into EC2 and run seed script
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_IP }}
+          username: ec2-user
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            cd /home/ec2-user/mvp/backend
+            npm run seed
