--- a/.github/workflows/backend_deploy.yml
+++ b/.github/workflows/backend_deploy.yml
@@ -30,6 +30,7 @@ jobs:
             pm2 restart api
   seed:
     runs-on: ubuntu-latest
+    needs: deploy
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -41,9 +42,5 @@ jobs:
           username: ec2-user
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            cd /home/ec2-user/mvp
-            git reset --hard HEAD   # Discard local changes
-            git clean -fd           # Remove untracked files
-            git pull origin main
-            cd backend
+            cd /home/ec2-user/mvp/backend
             npm run seed
