--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^5.0.1",
     "crypto": "^1.0.1",
     "nodemon": "^3.1.9",
+    "tsc": "^2.0.4",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
