adds port to .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,7 @@
 DATABASE_URL = ''
 FRONTEND_URL = ''
+# TODO: Rename to BACKEND_PUBLIC_URL
 BACKEND_URL = ''
 SENDGRID_API_KEY = ''
 MODE = ''
+PORT = ''
